# uuid-generator

./: Dockerfile  cspell.json  pyproject.toml
.github/workflows/: ci.yml  deploy-prod.yml
app/: main.py
